Fix spacing of top

--- a/static/frontend/stylesheets/style.css
+++ b/static/frontend/stylesheets/style.css
@@ -476,6 +476,7 @@ background-color: #9e0b0f;
 
 #main_body {
   background: #fff;
+  margin-top:35px;
 }
 
 .copyright{
