--- a/static/teams.css
+++ b/static/teams.css
@@ -336,7 +336,7 @@ p.markdown-note {
 .login_text { 
   text-align: center;
   width: auto;
-  margin: 150px 0 0 0;
+  margin: 115px 0 0 0;
 }
 
 .login_leaderboard {
